# artnavsegda

./: .Makefile.un~  .gitignore  .gldouble.c.un~  .glhello.c.un~  Makefile  Makefile.created  Makefile.mingw  Makefile.vc  Makefile.windows  Makefile~  Thumbs.db  an.image  an.small  anjpeg  anjpeg.c  autogen.sh  chado.c  chota  chota.c  config.ini  configure.ac  count  count.c  debug  debug.c  dump.sh  ghello  ghello.c  ghello2  ghello2.c  glchota.c  glchota.rc  glchota2.c  gldouble.c  gldouble.c~  gldouble_nobitmap.c  glhello.c  glhello.c~  glhello.ilk  glhello.ini  (+63 more)
glchota/: glchota.c  glchota.rc  glchota.vcxproj
gldouble/: gldouble.vcxproj
glhello/: glhello.c  glhello.rc  glhello.vcxproj
gltouch/: gltouch.c
modbus/: Makefile  i2cserver.c  mbget.c  mbset.c  modbus  modbus.c  modbuspi.c  modread.c  modset.c  server.c
ncmodbus/: configure.ac
ncmodbus/src/: Makefile.am
tarball/ghello/: configure.ac
tarball/ghello/src/: Makefile.am  man.Makefile
tarball/hello/: configure.ac
tarball/hello/src/: \  stat.c
tarball/vhello/: configure.ac
tarball/vhello/src/: Makefile.am  man.Makefile  vghello.c  vglade.vala  vgtext.ui  vgtext.vala  vhello.c  vhello.vala
winhello/: winhello.c
